--- a/index.html
+++ b/index.html
@@ -404,17 +404,17 @@
         </div>
 
         <!-- Kollam Branch Address Section -->
-        <div class="footer-items">
+      <!--  <div class="footer-items">
             <h3>Branch - Kollam</h3>
             <div class="border1"></div>
             <ul>
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i> I Robotics, Netaji Nagar-154, Ayathil (Po), Kollam - 691021</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 62825 91504</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-            </ul>
-            <!-- Embedded Google Map with new size -->
+            </ul>-->
+            <!-- Embedded Google Map with new size 
             <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3941.8898373105967!2d76.63134447501729!3d8.889833491166058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwNTMnMjMuNCJOIDc2wrAzOCcwMi4xIkU!5e0!3m2!1sen!2sin!4v1729915134706!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </div>-->
 
         <!-- Quick Links Section -->
         <div class="footer-items">
