--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
             <h3>Head Office - Coimbatore</h3>
             <div class="border1"></div>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 60 A MGR Nagar, Madukaai Road, Sidco Post, Coimbatore-641021</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site ,sangamam nagar,sakthi school backside, Coimbatore-641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.089800022716!2d76.96947287504449!3d10.956589089203353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU3JzIzLjciTiA3NsKwNTgnMTkuNCJF!5e0!3m2!1sen!2sin!4v1729852485043!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1737.9731180123676!2d77.0248940965089!3d10.936164241926454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sie!4v1746696722216!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
