--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
          <div class="add">
              <li>
                 <i class="fa-solid fa-map-location-dot"></i>
-                 <p>60 A MGR Nagar, Madukaai Road, Sidco Post, Coimbatore-641021</p>
+                 <p>23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</p>
              </li>
              <li>
                 <i class="fa-solid fa-envelope"></i>
@@ -165,7 +165,7 @@
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.089800022716!2d76.96947287504449!3d10.956589089203353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU3JzIzLjciTiA3NsKwNTgnMTkuNCJF!5e0!3m2!1sen!2sin!4v1729852485043!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+64120123rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
