--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
                 </div>
             </div>
             <div class="head-con">
-                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">I ROBOTICSS</a>
-                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">I ROBOTICSS</a>
+                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">IRobotics</a>
+                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">IRobotics</a>
             </div>
         </header>
         
@@ -80,8 +80,8 @@
         </div>
         <!-- Header Section -->
         <div class="header">
-            <h1>About I Roboticss</h1>
-            <p>At I Roboticss, we are committed to innovation in the field of robotics, driving technological advances that transform industries and improve everyday life. Our focus is on creating cutting-edge solutions that enhance efficiency, safety, and quality of life globally. We believe in a future where robotics and AI work hand-in-hand with humanity, offering transformative solutions that empower individuals and industries alike. Through rigorous research and a passion for problem-solving, we develop technologies that address real-world challenges, from healthcare and manufacturing to environmental sustainability. By prioritizing ethics, reliability, and excellence, we aim to build a world where robotics not only enhances human capability but also paves the way for a more connected, sustainable, and prosperous society.</p>
+            <h1>About IRobotics</h1>
+            <p>At IRobotics, we are committed to innovation in the field of robotics, driving technological advances that transform industries and improve everyday life. Our focus is on creating cutting-edge solutions that enhance efficiency, safety, and quality of life globally. We believe in a future where robotics and AI work hand-in-hand with humanity, offering transformative solutions that empower individuals and industries alike. Through rigorous research and a passion for problem-solving, we develop technologies that address real-world challenges, from healthcare and manufacturing to environmental sustainability. By prioritizing ethics, reliability, and excellence, we aim to build a world where robotics not only enhances human capability but also paves the way for a more connected, sustainable, and prosperous society.</p>
         </div>
     </div>
 
@@ -132,27 +132,14 @@
 
         <!-- Coimbatore Address Section -->
         <div class="footer-items">
-            <h3>Head Office - Coimbatore</h3>
+            <h3>Office - Coimbatore</h3>
             <div class="border1"></div>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 60 A MGR Nagar, Madukaai Road, Sidco Post, Coimbatore-641021</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.089800022716!2d76.96947287504449!3d10.956589089203353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU3JzIzLjciTiA3NsKwNTgnMTkuNCJF!5e0!3m2!1sen!2sin!4v1729852485043!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
-        </div>
-
-        <!-- Kollam Branch Address Section -->
-        <div class="footer-items">
-            <h3>Branch - Kollam</h3>
-            <div class="border1"></div>
-            <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> I Robotics, Netaji Nagar-154, Ayathil (Po), Kollam - 691021</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i> 62825 91504</li>
-                <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-            </ul>
-            <!-- Embedded Google Map with new size -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3941.8898373105967!2d76.63134447501729!3d8.889833491166058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwNTMnMjMuNCJOIDc2wrAzOCcwMi4xIkU!5e0!3m2!1sen!2sin!4v1729915134706!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <!-- Quick Links Section -->
@@ -198,7 +185,7 @@
 
     <!-- Footer Bottom Section -->
     <div class="footer-bottom">
-        <i class="fa-solid fa-copyright"></i> Copyright I ROBOTICSS. All Rights Reserved
+        <i class="fa-solid fa-copyright"></i> Copyright IRobotics. All Rights Reserved
     </div>
 </div>
 
