--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                     <li><a href="career.html">Career</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="shop.html"></a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="close-icon">&times;</div>
