--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
                 </div>
             </div>
             <div class="head-con">
-                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">IRobotics</a>
-                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">IRobotics</a>
+                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
+                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
             </div>
         </header>
         
@@ -79,8 +79,8 @@
         </div>
         <!-- Header Section -->
         <div class="header">
-            <h1>About IRobotics</h1>
-            <p>At IRobotics, we are committed to innovation in the field of robotics, driving technological advances that transform industries and improve everyday life. Our focus is on creating cutting-edge solutions that enhance efficiency, safety, and quality of life globally. We believe in a future where robotics and AI work hand-in-hand with humanity, offering transformative solutions that empower individuals and industries alike. Through rigorous research and a passion for problem-solving, we develop technologies that address real-world challenges, from healthcare and manufacturing to environmental sustainability. By prioritizing ethics, reliability, and excellence, we aim to build a world where robotics not only enhances human capability but also paves the way for a more connected, sustainable, and prosperous society.</p>
+            <h1>About Irobotics</h1>
+            <p>At Irobotics, we are committed to innovation in the field of robotics, driving technological advances that transform industries and improve everyday life. Our focus is on creating cutting-edge solutions that enhance efficiency, safety, and quality of life globally. We believe in a future where robotics and AI work hand-in-hand with humanity, offering transformative solutions that empower individuals and industries alike. Through rigorous research and a passion for problem-solving, we develop technologies that address real-world challenges, from healthcare and manufacturing to environmental sustainability. By prioritizing ethics, reliability, and excellence, we aim to build a world where robotics not only enhances human capability but also paves the way for a more connected, sustainable, and prosperous society.</p>
         </div>
     </div>
 
@@ -126,18 +126,18 @@
 <div class="footer">
     <div class="inner-footer">
         <div class="footer-items">
-            <img class="footer-logo" src="img/Logos.png" alt="I ROBOTICS Logo" style="width: 200px; max-width: 100%; height: auto;">
+            <img class="footer-logo" src="img/Logos.png" alt="Irobotics Logo" style="width: 200px; max-width: 100%; height: auto;">
         </div>
 
         <!-- Coimbatore Address Section -->
         <div class="footer-items">
-            <h3>Office - Coimbatore</h3>
+            <h3>Office Address</h3>
             <div class="border1"></div>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd Site, Victoria Avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+64120123rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
@@ -183,7 +183,7 @@
 
     <!-- Footer Bottom Section -->
     <div class="footer-bottom">
-        <i class="fa-solid fa-copyright"></i> Copyright IRobotics. All Rights Reserved
+        <i class="fa-solid fa-copyright"></i> Copyright Irobotics. All Rights Reserved
     </div>
 </div>
 
