--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="head-con">
-                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">I ROBOTICSS</a>
-                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">I ROBOTICSS</a>
+                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
+                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
             </div>
         </header>
         
@@ -47,7 +47,6 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                     <li><a href="career.html">Career</a></li>
-                    <li><a href="shop.html">Shop</a></li>
                     <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="close-icon">&times;</div>
@@ -82,11 +81,11 @@
      <div class="details">
          <span>Drop Us a Line</span>
          <h2>Visit any of our agency sites or connect with us today!</h2>
-         <h3>Head Office</h3>
+         <h3>Office Address</h3>
          <div class="add">
              <li>
                 <i class="fa-solid fa-map-location-dot"></i>
-                 <p>23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</p>
+                 <p>23rd Site, Victoria Avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</p>
              </li>
              <li>
                 <i class="fa-solid fa-envelope"></i>
@@ -102,7 +101,7 @@
              </li>
          </div>
      </div>
-     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.089800022716!2d76.96947287504449!3d10.956589089203353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU3JzIzLjciTiA3NsKwNTgnMTkuNCJF!5e0!3m2!1sen!2sin!4v1729852485043!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+     <div class="map"><iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </section>
  
     <section id="form-details">
@@ -154,18 +153,18 @@
     <div class="inner-footer">
         <div class="footer-items">
             <!-- <h2 style="font-size: xx-large;">I ROBOTICS</h2> -->
-            <img class="footer-logo" src="img/Logos.png" alt="I ROBOTICS Logo" style="width: 200px; max-width: 100%; height: auto;">
+            <img class="footer-logo" src="img/Logos.png" alt="Irobotics Logo" style="width: 200px; max-width: 100%; height: auto;">
         </div>
 
         <!-- Coimbatore Address Section -->
         <div class="footer-items">
-            <h3>Office - Coimbatore</h3>
+            <h3>Office Address</h3>
             <div class="border1"></div>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site Victoria avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd Site, Victoria Avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+64120123rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
 
@@ -180,7 +179,6 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -213,7 +211,7 @@
 
     <!-- Footer Bottom Section -->
     <div class="footer-bottom">
-        <i class="fa-solid fa-copyright"></i> Copyright I ROBOTICSS. All Rights Reserved
+        <i class="fa-solid fa-copyright"></i> Copyright Irobotics. All Rights Reserved
     </div>
 </div>
 
