--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="head-con">
-                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">I ROBOTICSS</a>
-                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">I ROBOTICSS</a>
+                <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
+                <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
             </div>
         </header>
         
@@ -46,7 +46,6 @@
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                     <li><a href="career.html">Career</a></li>
-                    <li><a href="#">Shop</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="close-icon">&times;</div>
@@ -383,38 +382,24 @@
 </section>
 
 <!-- footer -->
-<!-- footer -->
 <div class="footer">
     <div class="inner-footer">
         <div class="footer-items">
            
-            <img class="footer-logo" src="img/Logos.png" alt="I ROBOTICS Logo" style="width: 200px; max-width: 100%; height: auto;">
+            <img class="footer-logo" src="img/Logos.png" alt="Irobotics Logo" style="width: 200px; max-width: 100%; height: auto;">
         </div>
 
-        <!-- Coimbatore Address Section -->
+        <!-- Office Address Section -->
         <div class="footer-items">
-            <h3>Head Office - Coimbatore</h3>
+            <h3>Office Address</h3>
             <div class="border1"></div>
             <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd site ,sangamam nagar,sakthi school backside, Coimbatore-641201</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd Site, Victoria Avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                 <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1737.9731180123676!2d77.0248940965089!3d10.936164241926454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sie!4v1746696722216!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </ul>
         </div>
-
-        <!-- Kollam Branch Address Section -->
-      <!--  <div class="footer-items">
-            <h3>Branch - Kollam</h3>
-            <div class="border1"></div>
-            <ul>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> I Robotics, Netaji Nagar-154, Ayathil (Po), Kollam - 691021</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i> 62825 91504</li>
-                <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-            </ul>-->
-            <!-- Embedded Google Map with new size 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3941.8898373105967!2d76.63134447501729!3d8.889833491166058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwNTMnMjMuNCJOIDc2wrAzOCcwMi4xIkU!5e0!3m2!1sen!2sin!4v1729915134706!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>-->
 
         <!-- Quick Links Section -->
         <div class="footer-items">
@@ -426,7 +411,6 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -450,16 +434,15 @@
         </div>
     </div>
 
-    <!-- Social Media Links Section (Now placed below inner-footer) -->
+    <!-- Social Media Links Section -->
     <div class="social-media">
         <a href="https://www.instagram.com/i_roboticss" class="instagram"><i class="fab fa-instagram"></i></a>
-        <!-- <a href="#" class="youtube"><i class="fab fa-youtube"></i></a> -->
         <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/" class="linkedin"><i class="fab fa-linkedin"></i></a>
     </div>
 
     <!-- Footer Bottom Section -->
     <div class="footer-bottom">
-        <i class="fa-solid fa-copyright"></i> Copyright I ROBOTICSS. All Rights Reserved
+        <i class="fa-solid fa-copyright"></i> Copyright Irobotics. All Rights Reserved
     </div>
 </div>
 
