--- a/shop.html
+++ b/shop.html
@@ -29,8 +29,8 @@
         </div>
     </div>
     <div class="head-con">
-        <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">I ROBOTICSS</a>
-        <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">I ROBOTICSS</a>
+        <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
+        <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
     </div>
 </header>
 
@@ -48,7 +48,6 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                 <li><a href="career.html">Career</a></li>
-                <li class="active"><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="close-icon">&times;</div>
@@ -181,32 +180,19 @@
       <div class="inner-footer">
           <div class="footer-items">
               
-              <img class="footer-logo" src="img/Logos.png" alt="I ROBOTICS Logo" style="width: 200px; max-width: 100%; height: auto;">
+              <img class="footer-logo" src="img/Logos.png" alt="Irobotics Logo" style="width: 200px; max-width: 100%; height: auto;">
           </div>
   
-          <!-- Coimbatore Address Section -->
+          <!-- Office Address Section -->
           <div class="footer-items">
-              <h3>Head Office - Coimbatore</h3>
+              <h3>Office Address</h3>
               <div class="border1"></div>
               <ul>
-                  <li><i class="fa fa-map-marker" aria-hidden="true"></i> 60 A MGR Nagar, Madukaai Road, Sidco Post, Coimbatore-641021</li>
+                  <li><i class="fa fa-map-marker" aria-hidden="true"></i> 23rd Site, Victoria Avenue, Chettipalayam, Coimbatore, Tamil Nadu 641201</li>
                   <li><i class="fa fa-phone" aria-hidden="true"></i> 9488212024</li>
                   <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3917.089800022716!2d76.96947287504449!3d10.956589089203353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDU3JzIzLjciTiA3NsKwNTgnMTkuNCJF!5e0!3m2!1sen!2sin!4v1729852485043!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.co.in/maps/search/23rd+site+Victoria+avenue,+Chettipalayam,+Coimbatore,+Tamil+Nadu+641201/@10.9132076,77.0342763,17z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </ul>
-          </div>
-  
-          <!-- Kollam Branch Address Section -->
-          <div class="footer-items">
-              <h3>Branch - Kollam</h3>
-              <div class="border1"></div>
-              <ul>
-                  <li><i class="fa fa-map-marker" aria-hidden="true"></i> I Robotics, Netaji Nagar-154, Ayathil (Po), Kollam - 691021</li>
-                  <li><i class="fa fa-phone" aria-hidden="true"></i> 62825 91504</li>
-                  <li><i class="fa fa-clock" aria-hidden="true"></i> 10:00-18:00, Mon-Sat</li>
-              </ul>
-              <!-- Embedded Google Map with new size -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3941.8898373105967!2d76.63134447501729!3d8.889833491166058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwNTMnMjMuNCJOIDc2wrAzOCcwMi4xIkU!5e0!3m2!1sen!2sin!4v1729915134706!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
   
           <!-- Quick Links Section -->
@@ -219,7 +205,6 @@
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="ATL.html">Atal Tinkering Lab</a></li>
                   <li><a href="career.html">Career</a></li>
-                  <li><a href="shop.html">Shop</a></li>
                   <li><a href="contact.html">Contact</a></li>
               </ul>
           </div>
@@ -252,7 +237,7 @@
   
       <!-- Footer Bottom Section -->
       <div class="footer-bottom">
-          <i class="fa-solid fa-copyright"></i> Copyright I ROBOTICSS. All Rights Reserved
+          <i class="fa-solid fa-copyright"></i> Copyright Irobotics. All Rights Reserved
       </div>
   </div>
     <!-- arrow-marka -->
