--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="head-con">
-                <a href="https://www.instagram.com/irobotics_technologies?igsh=MWNjajJjM2NvajE0Yw=="><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
+                <a href="https://www.instagram.com/irobotics_technologies?utm_source=qr&igsh=MWJtZThrZzVmNGkxdQ=="><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
                 <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
             </div>
         </header>
