--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <div class="logo">
                 <a href="#"><img src="img/Logos.png" alt="Logo"></a>
             </div>
+            <h1>iRobotics</h1>
+                
             <div class="nav">
                 <ul class="item">
                     <li class="active"><a href="index.html">Home</a></li>
