--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="logo">
                 <a href="#"><img src="img/Logos.png" alt="Logo"></a>
             </div>
-            <div class="mainname">
+            <!--<div class="mainname">
             <h1>iRobotics</h1>
-                </div>
+                </div>-->
             <div class="nav">
                 <ul class="item">
                     <li class="active"><a href="index.html">Home</a></li>
