--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </head>
 <body>
       <!-- <header> -->
-        <header>
+       <!-- <header>
             <div class="contact-info">
                 <div class="phone">
                     <img src="img/header/telephone-call.png" alt="Phone Icon" width="20" height="20">
@@ -32,7 +32,7 @@
                 <a href="https://www.instagram.com/i_roboticss"><img src="img/header/instagram.png" alt="Instagram Icon">Irobotics</a>
                 <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/"><img src="img/header/linkedin.png" alt="LinkedIn Icon">Irobotics</a>
             </div>
-        </header>
+        </header> -->
         
         
 
