--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
     <!-- Social Media Links Section -->
     <div class="social-media">
-        <a href="https://www.instagram.com/i_roboticss" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/irobotics_technologies/ class="instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/i-robotics-undefined-7a1b78334/" class="linkedin"><i class="fab fa-linkedin"></i></a>
     </div>
 
