--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
 
     <!-- <navbar> -->
         <section class="section-1">
-            <div class="logo">
-                <a href="#"><img src="img/Logos.png" alt="Logo"></a>
-            </div>
-            <!--<div class="mainname">
-            <h1>iRobotics</h1>
-                </div>-->
-            <div class="nav">
-                <ul class="item">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="ATL.html">Atal Tinkering Lab</a></li>
-                    <li><a href="career.html">Career</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <div class="close-icon">&times;</div>
-            </div>
-           <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </section>
+    <div class="logo">
+        <a href="#"><img src="img/Logos.png" alt="Logo"></a>
+    </div>
+    <div class="header-img">
+        <img src="img/header/placeholder.png" alt="Header Image">
+    </div>
+    <div class="nav">
+        <ul class="item">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="ATL.html">Atal Tinkering Lab</a></li>
+            <li><a href="career.html">Career</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="close-icon">×</div>
+    </div>
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</section>
        
         <!-- <slide> -->
             <section id="slide_s">
