--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="about-text">
                     <h4 id="animated-text"> <img src="" alt=""></h4>
-                    <p>At I Roboticss, we are at the forefront of technological innovation, creating intelligent robotic solutions that enhance productivity and efficiency across various industries. Our journey began with a passion for automation and a vision to revolutionize the way humans interact with machines.</p>
+                    <p>At I Robotics, we are at the forefront of technological innovation, creating intelligent robotic solutions that enhance productivity and efficiency across various industries. Our journey began with a passion for automation and a vision to revolutionize the way humans interact with machines.</p>
                     <p>Our team of engineers, designers, and researchers are dedicated to pushing the boundaries of robotics. From autonomous robots that navigate complex environments to advanced robotic arms that perform intricate tasks, we specialize in developing cutting-edge technologies that solve real-world challenges.</p>
                     <p>Our mission is to empower businesses through automation, providing them with tools that increase operational efficiency and drive growth. We believe in a future where humans and robots work together seamlessly, improving lives and creating endless possibilities.</p>
                     <div class="action-links">
