--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="content">
                 <div class="about-img">
-                    <img src="img/Logos.png" alt="I Robotics">
+                    <img src="img/header/placeholder.png" alt="I Robotics">
                 </div>
                 <div class="about-text">
                     <h4 id="animated-text"> <img src="" alt=""></h4>
