--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
        <!-- <uniqe>      -->
         <div class="unique"> 
-            <div class="headin"><h1 class="heading__title">Why Choose I Roboticss?</h1></div>
+            <div class="headin"><h1 class="heading__title">Why Choose I Robotics?</h1></div>
             <div class="main-container">
                 <div class="headins">        
                     <p style="font-size: 18px; font-weight: 500; color: #000;">We deliver innovative, customized robotic solutions that enhance productivity, improve efficiency, and drive growth. Our expert team ensures cutting-edge technology and exceptional support tailored to meet your unique need</p>
